# ragmark

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  turbo.json  vitest.config.ts
apps/api/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/src/: config.py  dependencies.py  main.py
apps/api/src/api/: deps.py  router.py
apps/api/src/api/v1/: chat.py  documents.py  knowledge.py
apps/api/src/core/agent/: __init__.py  executor.py  prompts.py  tools.py
apps/api/src/core/knowledge/: indexing.py  manager.py  parser.py
apps/api/src/core/llm/: gateway.py  models.py  streaming.py
apps/api/src/core/rag/: chain.py  embeddings.py  loader.py  retriever.py  splitter.py
apps/api/src/db/: models.py  session.py  vector_store.py
apps/api/src/middleware/: correlation.py  error_handler.py  logging.py
apps/api/src/schemas/: chat.py  document.py  knowledge.py
apps/api/src/services/: chat_service.py  document_service.py  knowledge_service.py
apps/api/src/utils/: exceptions.py  logger.py
apps/api/tests/: conftest.py
apps/api/tests/api/: test_chat.py  test_documents.py  test_knowledge.py
apps/api/tests/core/: test_agent.py  test_llm_gateway.py  test_rag.py
apps/api/tests/services/: test_chat_service.py
apps/foldex/: README.md  SKILL.md  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/foldex/src/: browser-detector.ts  config.ts  extractor.ts  index.ts  md-converter.ts  server.ts  store.ts  types.ts
apps/foldex/src/parser/: auto-tagger.ts  link-extractor.ts  metadata.ts  sectionizer.ts  structure.ts
apps/foldex/tests/: search.test.ts  store.test.ts
apps/web/: eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
(+11 files in other folders)
