[project]
name = "ragmark-api"
version = "0.1.0"
description = "RAGMark API — FastAPI + LangChain engineered starter"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28,<1",
    "langchain>=0.3,<1",
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.3,<1",
    "langchain-anthropic>=0.3,<1",
    "langchain-community>=0.3,<1",
    "langchain-text-splitters>=0.3,<1",
    "chromadb>=0.5,<1",
    "langchain-chroma>=0.2,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7",
    "structlog>=24.4,<25",
    "python-multipart>=0.0.20",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T20", # flake8-print
]
ignore = ["E501", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-httpx>=0.35,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.8,<1",
    "mypy>=1.14,<2",
]
